# PysimpleguiMultipleLayoutsClass

./: README.md  example.py  main.py  pyproject.toml
