[tool.poetry]
name = "repl_python3_beta_PysimpleguiMultipleLayoutsClass"
version = "0.1.0"
description = ""
authors = ["egjegjeg <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PySimpleGUI = "^4.51.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
